# SecureCart

./: .env  .gitignore  .snyk  README.md  compose.yml  dev.compose.yml  devtools.compose.yml  prod.compose.yml  run-dev.sh  tools.dev.compose.yml
.devcontainer/: Dockerfile  bashrc  devcontainer.json  devenv.compose.yml  env.dev.compose.yml
.github/workflows/: ci.yml  deploy.yml  rust.yml  typescript.yml
backend/api/: Cargo.toml  Dockerfile  clippy.toml  healthcheck.sh
backend/api/.sqlx/: query-011ca62fe2f19ca85b4855be9cc35ba188566ea3d7cd69b9c9c08940bf7f01df.json  query-0165e556e9971b25cc3a64d4a6930f59ffa20b2490f088e9e75ce4850f9a3fc5.json  query-02b6c33242ffc3d1a315cc44090ccdbe17856453ffb61cd24fe28286b48c48e1.json  query-0a285e1382713c7a82a540738a5760335090bf44fee54c6704db15eda9a45e7a.json  query-0ce20f5e7fc6c58e17e22cf4b25a57279141987d54fc3a17f0e2fe5d2a147e43.json  query-0f5a2e05ac43d8d1b0413c176dcb01fdf5f8c159114b11ba54d47b24b194d36d.json  query-155f0b7063a7c84c048a8218d94810e9ca670fa6e92a943c02a7e2a0e953dcdc.json  query-1c2c3f73d85495a43fe7e8da8c045d5062f7e6323f66f9d2e4827212a23681fa.json  query-1c7b3a56d7dbadef1140fd5ae831bc61bbb2479cb9749b98f95dee3b05855229.json  query-1f9194401ef00fa07be0a5c7ded58d3d095e2e95e4fd908594f4827e90cc7afc.json  query-201b01041e668b5b85f56a1f96fed7c7751d49bd6aca2b6a28c68c78fdec26c6.json  query-209cd5bd2177d94555952ce2c001d09dde05d71bca946e6b56e99210acbfc7ca.json  query-25b8f8132dfad7c20b1d3f00480a736ba1c369432a31e957ee4f5583cf541107.json  query-2dc5e20d5cc793cc639466b2a4177bb090792b553b951f524ee6f5939f992b7a.json  query-2e9007014b265c5190a9de56b6eb1360ad68702a261daa2079c93dd6039fa37d.json  query-3249393ec49e22a8e80f0e717102bf52aa4c631b299b20022ea164736fa16cb5.json  query-3cc60d997855170c9eca8ee6107a9ecf37bb20447d7c7fb0fc96e3f08ac7308a.json  query-3d7b8566f5954dffcb89c6e42aff3038f7cf9102774d7a9db7d5634430d0e77e.json  query-40e5b26d2df5aa2cc92c1a45c47560092b4cbb50dd1aa24320afc6a729f16cfe.json  query-49870637347513197ca84dd2520dccdc63b266bfd542d38902dfafe17f12b265.json  query-4ab821264f974863f76adde1be0a8ca1168b7d0ed0044295b49e00a5d6601b78.json  query-4baf0b490088d46cb38bd56d30a0251179b65b41dc1ae242ad2d8d25fe38ec6a.json  query-4ce1da648d9b743f337ac1067aaab98511e07ff4534f980b72bbac62564f67fe.json  query-4f5a71ddc30ae3aec06ac3f82ab46a1964c554c0cc5b5baf6b12e51ce6ab4e07.json  query-50dabb1bb676e35d2363dfc7498ee537980ba554526a07f872c645b21848c206.json  query-52ebe9d67115a48427f2468efd9809d6d2b9c75a1336f54b29908e9888ce3015.json  query-60049c109aeb785d4cbcf522f34ddfd25f1439f0348abeefe9970dbf1115a801.json  query-61b5c0e8755d4bfd5e95cf811fce41c71f303b3725ba5fb384bdd78f86b41e03.json  query-63d1d386a004b18e4e7198c3131bd06094750ef576efea3da0076100675cb7d3.json  query-688eb462877c684aead1a916c611f3d1b9e6d69c040813e00231405de48539a9.json  query-6c125e6ae12d43e9545583d42c010500c3de4df628df34a8ecb2af57777eb79e.json  query-6e9011835eb15f2e5f1b2f62dc10d124a0ca3c9272ad56999795d9c287e16bd1.json  query-6ebec680fabff2f0426ecc9022b00b0e29801d61a3ad6807f3d8a8d26db372c9.json  query-71cc5fcfc194f8a87191dacde4872c88ebb2779184574c2334d803584785b92c.json  query-77a09ba47fc1133b0f9408b612444dbe22132de0c84e73f9924e2d814f69c4f7.json  query-84c4f84549e94c0f3e6f904fef5abab18b6d4d619534f344dd82fe136331e4e5.json  query-8fb897da82cbd03fba8b5109b69f403d6000ec73f46cda7edeeef070eec9ea78.json  query-96892d962da6786a65f85a1aab2f6fd1562d21cd9fdae1d1f9cd28813dbdd044.json  query-9866f719ebb354a6ea4103c35417ef6d19f5c2ede620f28ded21e8e549ef1c69.json  query-98ae7e37d2b7e7e66790964f3cc240620727ce91aac4ee88f5e492f05ddf0096.json  (+22 more)
backend/api/src/: db.rs  main.rs  state.rs
backend/api/src/constants/: api.rs  db.rs  mod.rs  passwords.rs  redis.rs  s3.rs  secrets.rs  sessions.rs  stripe.rs
backend/api/src/controllers/: auth.rs  mod.rs
backend/api/src/db/: mod.rs  models.rs
backend/api/src/db/models/: apporder.rs  appuser.rs  category.rs  category_membership.rs  mod.rs  offer.rs  offer_membership.rs  order_item.rs  password.rs  prelude.rs  product.rs  product_image.rs  totp.rs
backend/api/src/middleware/: auth.rs  mod.rs  session.rs
backend/api/src/routes/: auth.rs  checkout.rs  mod.rs  orders.rs  products.rs  registration.rs  users.rs
backend/api/src/routes/webhook/: mod.rs  stripe.rs
backend/api/src/services/: auth.rs  checkout.rs  errors.rs  media.rs  mod.rs  orders.rs  products.rs  registration.rs  users.rs
backend/api/src/services/registration/: mod.rs  store.rs
backend/api/src/services/sessions/: mod.rs  store.rs
backend/api/src/services/sessions/store/: mod.rs
backend/api/src/utils/: email.rs  httperror.rs  mod.rs
backend/db/: Dockerfile  schema.sql
backend/db-setup/: Dockerfile  create-admin.sh
backend/minio/: Dockerfile
backend/minio-setup/: startup.sh
backend/minio/main/: healthcheck.sh
backend/minio/setup/: Dockerfile  startup.sh  user-policy.json
backend/stripe-forward/: Dockerfile  listen.sh
frontend/: .gitignore  Dockerfile  eslint.config.mjs  package.json  tsconfig.json
frontend/src/: 2fa.html  checkout.html  enroll2fa.html  index.html  login.html  order.html  signup.html  store.html  user.html
frontend/src/admin/: orders.html  product.html  products.html  users.html
frontend/src/js/: checkout.js
frontend/src/js/admin/: orders.js  product.js  products.js  users.js
frontend/src/ts/: 2fa.ts  csrf.ts  enroll2fa.ts  index.ts  login.ts  order.ts  signup.ts  store.ts  user.ts
frontend/src/ts/admin/: orders.ts  product.ts  products.ts  users.ts
nginx/: Dockerfile  healthcheck.sh  nginx.conf
nginx/ssl/: genkey.sh
