[package]
name = "securecart-api"
version = "0.1.0"
edition = "2021"
description = "The API for the SecureCart ecommerce platform (my CCSE coursework)"
license = "MIT"
repository = "https://github.com/j-0-3/SecureCart"
readme = "../../README.md"
keywords = ["securecart"]
categories = ["web-programming"]

[dependencies]
argon2 = { version = "0.5.3" }
axum = { version = "0.8.1", features = ["json", "http1", "tokio"], default-features = false }
axum-extra = { version = "0.10.0", features = ["cookie"], default-features = false}
getrandom = "0.3.1"
redis = { version = "0.28.2",  features = ["tokio-comp", "ahash", "keep-alive"], default-features = false}
regex = { version = "1.11.1" }
serde = { version = "1.0.217" }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "macros"], default-features = false }
time = { version = "0.3.37", features = ["macros"], default-features = false}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"], default-features = false } 
totp-rs = { version = "5.6.0"  }

[profile.release]
strip = true
lto = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
implicit_return = "allow"
expect_used = "allow"
module_name_repetitions="allow"
question_mark_used="allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
single_call_fn = "allow"
arbitrary_source_item_ordering = "allow"
mod_module_files = "allow"
single_char_lifetime_names = "allow"
partial_pub_fields = "allow"
ref_patterns = "allow"
blanket_clippy_restriction_lints = "allow"
