[package]
name = "securecart-api"
version = "0.1.0"
edition = "2021"
description = "The API for the SecureCart ecommerce platform (my CCSE coursework)"
license = "MIT"
repository = "https://github.com/j-0-3/SecureCart"
readme = "../../README.md"
keywords = ["securecart"]
categories = ["web-programming"]

[dependencies]
argon2 = { version = "0.5.3" }
async-stripe = { version = "0.39.1", features = [ "runtime-tokio-hyper" ], optional = true }
axum = { version = "0.8.1", features = [ "json", "http1", "tokio", "query", "multipart" ], default-features = false }
axum-extra = { version = "0.10.0", features = [ "cookie" ], default-features = false }
base64 = "0.22.1"
getrandom = "0.3.1"
object_store = { version = "0.11.2", features = ["aws"] }
redis = { version = "0.28.2", features = [ "tokio-comp", "ahash", "keep-alive", "uuid"], default-features = false }
regex = { version = "1.11.1" }
serde = { version = "1.0.217" }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [ "postgres", "runtime-tokio", "time", "macros", "uuid" ], default-features = false }
thiserror = "2.0.11"
time = { version = "0.3.37", features = [ "macros", "serde" ], default-features = false }
tokio = { version = "1.43.0", features = [ "macros", "rt-multi-thread" ], default-features = false }
totp-rs = { version = "5.6.0", features = ["qr"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }

[features]
stripe = ["dep:async-stripe"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
implicit_return = "allow"
expect_used = "allow"
module_name_repetitions = "allow"
question_mark_used = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
single_call_fn = "allow"
arbitrary_source_item_ordering = "allow"
mod_module_files = "allow"
single_char_lifetime_names = "allow"
partial_pub_fields = "allow"
ref_patterns = "allow"
blanket_clippy_restriction_lints = "allow"
multiple_crate_versions = "allow"
unseparated_literal_suffix = "allow"
